; ModuleID = '/home/carl/AnghaBench/fastsocket/kernel/drivers/target/loopback/extr_tcm_loop.c_tcm_loop_alloc_core_bus.c'
source_filename = "/home/carl/AnghaBench/fastsocket/kernel/drivers/target/loopback/extr_tcm_loop.c_tcm_loop_alloc_core_bus.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@.str = private unnamed_addr constant [11 x i8] c"tcm_loop_0\00", align 1
@tcm_loop_primary = common dso_local global i32 0, align 4
@.str.1 = private unnamed_addr constant [37 x i8] c"Unable to allocate tcm_loop_primary\0A\00", align 1
@tcm_loop_lld_bus = common dso_local global i32 0, align 4
@.str.2 = private unnamed_addr constant [44 x i8] c"bus_register() failed for tcm_loop_lld_bus\0A\00", align 1
@tcm_loop_driverfs = common dso_local global i32 0, align 4
@.str.3 = private unnamed_addr constant [47 x i8] c"driver_register() failed fortcm_loop_driverfs\0A\00", align 1
@.str.4 = private unnamed_addr constant [31 x i8] c"Initialized TCM Loop Core Bus\0A\00", align 1
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 ()* @tcm_loop_alloc_core_bus to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @tcm_loop_alloc_core_bus() #0 {
  %1 = alloca i32, align 4
  %2 = alloca i32, align 4
  %3 = call i32 @root_device_register(i8* getelementptr inbounds ([11 x i8], [11 x i8]* @.str, i64 0, i64 0))
  store i32 %3, i32* @tcm_loop_primary, align 4
  %4 = load i32, i32* @tcm_loop_primary, align 4
  %5 = call i64 @IS_ERR(i32 %4)
  %6 = icmp ne i64 %5, 0
  br i1 %6, label %7, label %11

7:                                                ; preds = %0
  %8 = call i32 @pr_err(i8* getelementptr inbounds ([37 x i8], [37 x i8]* @.str.1, i64 0, i64 0))
  %9 = load i32, i32* @tcm_loop_primary, align 4
  %10 = call i32 @PTR_ERR(i32 %9)
  store i32 %10, i32* %1, align 4
  br label %32

11:                                               ; preds = %0
  %12 = call i32 @bus_register(i32* @tcm_loop_lld_bus)
  store i32 %12, i32* %2, align 4
  %13 = load i32, i32* %2, align 4
  %14 = icmp ne i32 %13, 0
  br i1 %14, label %15, label %17

15:                                               ; preds = %11
  %16 = call i32 @pr_err(i8* getelementptr inbounds ([44 x i8], [44 x i8]* @.str.2, i64 0, i64 0))
  br label %28

17:                                               ; preds = %11
  %18 = call i32 @driver_register(i32* @tcm_loop_driverfs)
  store i32 %18, i32* %2, align 4
  %19 = load i32, i32* %2, align 4
  %20 = icmp ne i32 %19, 0
  br i1 %20, label %21, label %23

21:                                               ; preds = %17
  %22 = call i32 @pr_err(i8* getelementptr inbounds ([47 x i8], [47 x i8]* @.str.3, i64 0, i64 0))
  br label %26

23:                                               ; preds = %17
  %24 = call i32 @pr_debug(i8* getelementptr inbounds ([31 x i8], [31 x i8]* @.str.4, i64 0, i64 0))
  %25 = load i32, i32* %2, align 4
  store i32 %25, i32* %1, align 4
  br label %32

26:                                               ; preds = %21
  %27 = call i32 @bus_unregister(i32* @tcm_loop_lld_bus)
  br label %28

28:                                               ; preds = %26, %15
  %29 = load i32, i32* @tcm_loop_primary, align 4
  %30 = call i32 @root_device_unregister(i32 %29)
  %31 = load i32, i32* %2, align 4
  store i32 %31, i32* %1, align 4
  br label %32

32:                                               ; preds = %28, %23, %7
  %33 = load i32, i32* %1, align 4
  ret i32 %33
}

declare dso_local i32 @root_device_register(i8*) #1

declare dso_local i64 @IS_ERR(i32) #1

declare dso_local i32 @pr_err(i8*) #1

declare dso_local i32 @PTR_ERR(i32) #1

declare dso_local i32 @bus_register(i32*) #1

declare dso_local i32 @driver_register(i32*) #1

declare dso_local i32 @pr_debug(i8*) #1

declare dso_local i32 @bus_unregister(i32*) #1

declare dso_local i32 @root_device_unregister(i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
